tests/crablangdoc-ui/feature-gate-crablangdoc_missing_doc_code_examples.stderr
error: unknown lint: `crablangdoc::missing_doc_code_examples`
  --> $DIR/feature-gate-crablangdoc_missing_doc_code_examples.rs:3:1
   |
LL | #![allow(crablangdoc::missing_doc_code_examples)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `crablangdoc::missing_doc_code_examples` lint is unstable
   = note: see issue #101730 <https://github.com/crablang/crablang/issues/101730> for more information
   = help: add `#![feature(crablangdoc_missing_doc_code_examples)]` to the crate attributes to enable
note: the lint level is defined here
  --> $DIR/feature-gate-crablangdoc_missing_doc_code_examples.rs:1:9
   |
LL | #![deny(unknown_lints)]
   |         ^^^^^^^^^^^^^

error: unknown lint: `crablangdoc::missing_doc_code_examples`
  --> $DIR/feature-gate-crablangdoc_missing_doc_code_examples.rs:3:1
   |
LL | #![allow(crablangdoc::missing_doc_code_examples)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `crablangdoc::missing_doc_code_examples` lint is unstable
   = note: see issue #101730 <https://github.com/crablang/crablang/issues/101730> for more information
   = help: add `#![feature(crablangdoc_missing_doc_code_examples)]` to the crate attributes to enable

error: unknown lint: `crablangdoc::missing_doc_code_examples`
  --> $DIR/feature-gate-crablangdoc_missing_doc_code_examples.rs:3:1
   |
LL | #![allow(crablangdoc::missing_doc_code_examples)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the `crablangdoc::missing_doc_code_examples` lint is unstable
   = note: see issue #101730 <https://github.com/crablang/crablang/issues/101730> for more information
   = help: add `#![feature(crablangdoc_missing_doc_code_examples)]` to the crate attributes to enable

error: aborting due to 3 previous errors

